fixed bug where playlist image resize to fit instead of being cropped

--- a/app/assets/stylesheets/components/playlist_detail.scss
+++ b/app/assets/stylesheets/components/playlist_detail.scss
@@ -33,8 +33,13 @@
 .playlist-detail-image {
   height: 300px;
   width: 300px;
-  display: block;
   background: white;
+
+  img {
+    height: 300px;
+    width: 300px;
+    object-fit: cover;
+  }
 }
 
 .playlist-detail-song-list {
